
[workspace.package]
authors = ["Min"]
edition = "2021"
publish = false

[workspace.dependencies]
access-key-marketplace = {path = "src"}
market-test = { path = "tests", default-features = false}
near-sdk = "4.0.0"
uint = { version = "0.9.3", default-features = false }
serde = { version = "1.0", features = ["derive"] }
near-workspaces = { version = "0.7.0", features = ["unstable"]  }
tokio = { version = "1.10.0", features = ["full"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
near-units = "0.2.0"
anyhow = "1.0"


[workspace]
resolver = "2"
members = [
    "tests",
    "src",
]



